# locker

./: Cargo.toml  README.md
cli/: Cargo.toml  target.locker
cli/src/: main.rs
core/: Cargo.toml  test.tar
core/src/: core.rs  lib.rs  locker.rs
gui/: Cargo.toml
gui/src/: main.rs
locker-cli/: tg.locker
locker-cli/src/: main.rs
locker-core/: Cargo.toml
locker-core/src/: core.rs  fusefs.rs  locker.rs
src/: core.rs  fusefs.rs  main.rs
