[package]
name = "locker-ai"
version = "0.1.0"
edition = "2021"

[dependencies]
tar = "0.4.40"
crossbeam = "0.8.2"
chacha20poly1305 = "0.10.1"
rand = "0.8.5"
aes-gcm-siv = "0.11.1"
rayon = "1.8.0"
argon2 = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3.3"
num_cpus = "1.16.0"
log = "0.4.20"
env_logger = "0.10.1"
fuser = "0.15.1"
libc = "0.2.172"
whoami = "1.6.0"
time = "0.3.41"
